--- a/latest/css/themes/me.scss
+++ b/latest/css/themes/me.scss
@@ -7,6 +7,8 @@
 @import "../abstracts/variables";
 
 // fonts
+@import url('https://fonts.googleapis.com/css2?family=Dosis:wght@523&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+/*
 @font-face {
     font-family: 'Raleway', sans-serif;
     src: url("../../assets/fonts/Raleway/Raleway-VariableFont_wght.ttf") format("fft"),
@@ -16,14 +18,14 @@
     font-family: 'Dosis', sans-serif;
     src: url("../../assets/fonts/Dosis/Dosis-VariableFont_wght.ttf") format("fft");
 }
- 
+*/
 // color vars
 $alt:  #dfc53c;
 $primary: adjust-hue( $alt, 180 );
 $secondary: adjust-hue( $primary, 260 );
 $accent: adjust-hue( $secondary, 180 );
  
-body.me {
+.me {
 
     // body background
     background-color: $white;
@@ -32,7 +34,6 @@ body.me {
     .alert {
         font-family: 'Raleway', sans-serif;
         font-weight: 200;
-        font-variation-settings: 'wdth' 110;
     }
     h1, h2, h3, h4, h5, h6 {
         font-family: 'Dosis', sans-serif;
@@ -42,8 +43,6 @@ body.me {
         font-family: 'Raleway', sans-serif;
         font-size: 1rem;
         font-weight: 300;
-        font-variation-settings: 'wdth' 100;
-        font-optical-sizing: auto;
     }
 
     // font variations
