--- a/latest/css/themes/me.scss
+++ b/latest/css/themes/me.scss
@@ -50,31 +50,59 @@ $accent: adjust-hue( $secondary, 180 );
         font-size: 2rem;
         font-weight: 500;
         font-variation-settings: 'wdth' 90;
+        color: darken( $secondary, 50% );
     }
     h2 {
         font-size: 1.75rem;
         font-weight: 450;
         font-variation-settings: 'wdth' 90;
+        color: darken( $secondary, 45% );
     }
     h3 {
         font-size: 1.5rem;
         font-weight: 400;
         font-variation-settings: 'wdth' 90;
+        color: darken( $secondary, 40% );
     }
     h4 {
         font-size: 1.25rem;
         font-weight: 350;
         font-variation-settings: 'wdth' 90;
+        color: darken( $secondary, 35% );
     }
     h5 {
         font-size: 1rem;
         font-weight: 300;
         font-variation-settings: 'wdth' 100;
+        color: darken( $secondary, 30% );
     } 
     h6 {
         font-size: .75rem;
         font-weight: 250;
         font-variation-settings: 'wdth' 110;
+        color: darken( $secondary, 25% );
+    }
+
+    // links
+    a,
+    a.icon-link {
+        color: darken( $primary, 5% );
+        text-decoration: none;
+        font-weight: 400;
+        &:visited {
+            color: darken( $primary, 15% );
+            font-weight: 350;
+        }
+        &:hover {
+            color: darken( $primary, 10% );
+            text-decoration: underline;
+            font-weight: 450;
+        }
+        &:active {
+            color: $alt;
+            text-decoration: underline;
+            font-weight: 500;
+        }
     }
 
     // M (larger)
@@ -274,29 +302,9 @@ $accent: adjust-hue( $secondary, 180 );
         margin: 5px;
     }
 
-    // links
-    a,
-    a.icon-link {
-        color: $primary;
-        &:visited {
-            color: darken( $primary, 20% );
-        }
-        &:hover {
-            color: lighten( $primary, 25% );
-        }
-        &:active {
-            color: $accent;
-        }
-    }
 
-    a.icon-link svg,
-    a.btn svg {
-        width: 1.25rem;
-        height: 1.25rem;
-    }
-    a.btn svg {
-        margin-right: .75rem;
-    }
+
+
 
     // buttons
     a.btn {
@@ -306,42 +314,103 @@ $accent: adjust-hue( $secondary, 180 );
         -webkit-border-radius: 5px;
         -moz-border-radius: 5px;
         border-radius: 5px;
-        color: #FFFFFF;
         font-size: 1rem;
         font-weight: 100;
-        padding: .75rem 0;
-        background-color: rgba(255, 255, 255, 0);
-        border: solid $primary 1px;
-        text-decoration: none;
         cursor: pointer;
-        color: $primary;
+    }
+
+    a.btn {
+        color: darken( $primary, 30% );
+        background-color: lighten( $primary, 47% );
+        border: solid lighten( $primary, 30% ) 1px;
+        text-decoration: none;
         &:visited {
             color: darken( $primary, 30% );
             border: solid darken( $primary, 30% ) 1px;
         }
         &:hover {
-            color: lighten( $primary, 25% );
+            color: darken( $primary, 10% );
             border: solid lighten( $primary, 25% ) 1px;
+            text-decoration: underline;
         }
         &:active {
-            color: darken( $alt, 25% );
+            color: darken( $alt, 10% );
+            border: solid darken( $alt, 25% ) 1px;
+            text-decoration: underline;
+        }
+    }
+
+    a.btn-nav_back,
+    a.btn-sidebar_toggle-menu,
+    a.btn-alert_confirm {
+        color: darken( $primary, 30% );
+        background-color: lighten( $primary, 47% );
+        border: solid lighten( $primary, 30% ) 1px;
+        &:visited {
+            color: darken( $primary, 10% );
+            background-color: $white;
+            border: solid darken( $primary, 30% ) 1px;
+        }
+        &:hover {
+            color: $white;
+            background-color: darken( $primary, 10% );
+            border: solid darken( $primary, 30% ) 1px;
+        }
+        &:active {
+            color: $white; 
+            background-color: darken( $alt, 10% );
             border: solid darken( $alt, 25% ) 1px;
         }
     }
 
-    // alert
-    .alert { 
+    a.btn-alert_confirm {
+        background-color: lighten( $alt, 47% );
+        border: solid lighten( $alt, 30% ) 1px;
+    }
+
+    a.icon-link svg,
+    a.btn svg {
+        width: 1.25rem;
+        height: 1.25rem;
+    }
+
+    a.btn-nav_back,
+    a.btn-sidebar_toggle-menu {
+        padding: .75rem;
+    }
+
+    a.btn-nav_main,
+    a.btn-alert_confirm {
+        margin: .5rem .75rem;
+        padding: .75rem .5rem;
+    }
+
+    .grid__fixed-width a.btn-nav_back,
+    .grid__fixed-width a.btn-sidebar_toggle-menu {
+        margin: .5rem 0;
+    }
+
+    a.btn-nav_main svg,
+    a.btn-alert_confirm svg {
+        margin-right: .75rem;
+    }
+
+    // bars
+    .nav-bar,
+    .cta-bar_alert { 
         display: flex;
         flex-direction: row;
         align-items: center;
         text-align: center;
-        padding: .75rem 0;
-    }
-    .alert a.btn {
-        margin: 0 .5rem 0;
-        padding: .5rem .75rem;
+        padding: .5rem;
     }
 
-    // call-to-action
-    
+    .grid__fixed-width .nav-bar,
+    .grid__fixed-width .cta-bar_alert {
+        padding: .5rem 0;
+    }
+    // footer
+    footer p {
+        color: $white;
+    }
  }
