update ss.me theme styles

--- a/latest/css/themes/me.scss
+++ b/latest/css/themes/me.scss
@@ -302,8 +302,19 @@ $accent: adjust-hue( $secondary, 180 );
         margin: 5px;
     }
 
-
-
+    // isometric backgrounds
+    .iso-background__repeating {
+        background-image: url("../../assets/iso__grid-background.png");
+        background-repeat: repeat;
+    }
+    .iso-background__photo {
+        background-image: url("../../assets/iso__grid-pattern-photo-detail.jpg");
+        background-repeat: no-repeat;
+    }
+    .iso-background__mitsubishis {
+        background-image: url("../../assets/iso__grid-Mitsubishis.jpg");
+        background-repeat: no-repeat;
+    }
 
 
     // buttons
