--- a/latest/css/layout/_grid.css
+++ b/latest/css/layout/_grid.css
@@ -3,7 +3,11 @@
  * ==========
  * layout/grid
  */
-/* Mixins */
+/*
+ * Mixins
+ * =================
+ * abstracts/mixins
+ */
 /*
  * Define media breakpoints map
  * ==========
@@ -59,6 +63,10 @@
 .grid-2-2,
 .grid-1-1 {
   width: 100%;
+}
+
+.full-height {
+  height: 100vh;
 }
 
 @media (max-width: 375px) {
