--- a/latest/css/layout/_grid.scss
+++ b/latest/css/layout/_grid.scss
@@ -21,6 +21,10 @@
 .grid-2-2,
 .grid-1-1 {  width: 100%; }
 
+.full-height {
+    height: 100vh;
+}
+
 // supports 2, even #rd - columns
 @include respond-to('XS') {
     .grid-11-12,
@@ -425,6 +429,8 @@
         }
     }
 }
+
+
 
 // responsive containers
 .grid {
