--- a/latest/css/themes/me.scss
+++ b/latest/css/themes/me.scss
@@ -304,15 +304,15 @@ $accent: adjust-hue( $secondary, 180 );
 
     // isometric backgrounds
     .iso-background__repeating {
-        background-image: url("../../assets/iso__grid-background.png");
+        background-image: url("https://cdn.jsdelivr.net/gh/scudderstevens/styles@master/latest/assets/iso__grid-background.png");
         background-repeat: repeat;
     }
     .iso-background__photo {
-        background-image: url("../../assets/iso__grid-pattern-photo-detail.jpg");
+        background-image: url("https://cdn.jsdelivr.net/gh/scudderstevens/styles@master/latest/assets/iso__grid-pattern-photo-detail.jpg");
         background-repeat: no-repeat;
     }
     .iso-background__mitsubishis {
-        background-image: url("../../assets/iso__grid-Mitsubishis.jpg");
+        background-image: url("https://cdn.jsdelivr.net/gh/scudderstevens/styles@master/latest/assets/iso__grid-Mitsubishis.jpg");
         background-repeat: no-repeat;
     }
 
