--- a/latest/css/layout/_grid.css
+++ b/latest/css/layout/_grid.css
@@ -677,3 +677,23 @@
   margin: 0 auto;
   justify-content: center;
 }
+
+.grid-justify-right, .grid-hori-right {
+  margin-right: 0;
+  margin-left: auto;
+  justify-content: right;
+}
+
+.grid-justify-left, .grid-hori-left {
+  margin-right: auto;
+  margin-left: 0;
+  justify-content: right;
+}
+
+.grid-wrap {
+  flex-wrap: wrap;
+}
+
+.grid-nowrap {
+  flex-wrap: nowrap;
+}
