--- a/latest/css/pages/vt.scss
+++ b/latest/css/pages/vt.scss
@@ -1,5 +1,5 @@
 /*
-* VerdantTongu.es
+* VerdantTongues.com
 * ===========
 * pages/vt.scss
 */
@@ -71,5 +71,4 @@
         }
     }
     // END - __rethink-reshape
-    
 }
