--- a/latest/css/themes/vt.scss
+++ b/latest/css/themes/vt.scss
@@ -1,7 +1,7 @@
 /*
- * VerdantTongu.es
+ * VerdantTonguescom
  * ===========
- * themes/verdant.scss
+ * themes/vt.scss
  */
  @import "../abstracts/mixins";
  @import "../abstracts/variables";
