--- a/latest/css/themes/me.scss
+++ b/latest/css/themes/me.scss
@@ -421,6 +421,164 @@ $accent: adjust-hue( $secondary, 180 );
         background-attachment: fixed;
     }
 
+    // intro duo card
+    .intro-duo {
+        display: flex;
+        flex-direction: row;
+        margin: 0;
+    }
+    .intro-duo__profile {
+        display: flex;
+        flex-direction: column;
+        .profile-img {
+            background-image: url("https://ik.imagekit.io/mp2mjn7fgdt/ssme/tr:w-750/content/Scudder-Trixie_profile-1000w668h.jpg");
+            background-repeat: no-repeat;
+            background-position-x: 70%;
+            background-position-y: center;
+            background-size: cover;
+            height: 500px;
+            width: 500px;
+        }
+        .intro-duo__title {
+            display: block;
+            margin: 0 2em auto;
+        }
+
+    }
+    .intro-duo__copy {
+
+        display: flex;
+        flex-direction: column;
+        width: calc(100% - 500px);
+
+        margin: auto 2em;
+        align-content: center;
+
+        .intro-duo__title {
+            display: none;
+        }
+
+    }
+    @include lg {
+        .intro-duo__profile {
+            margin-bottom: 0;
+            .profile-img {
+                background-image: url("https://ik.imagekit.io/mp2mjn7fgdt/ssme/tr:w-550/content/Scudder-Trixie_profile-550w367h.jpg");
+                height: 250px;
+                width: 250px;
+            }
+
+            .intro-duo__title {
+                display: none;
+            }
+
+        }
+        .intro-duo__copy {
+
+            display: flex;
+            flex-direction: column;
+            width: calc( 100% - 4em );
+            margin: 0;
+            padding: 2em;
+
+            .intro-duo__title {
+                display: block;
+            }
+
+        }
+    }
+    @include md {
+        .intro-duo {
+            display: flex;
+            flex-direction: column;
+            height: 100%;
+        }
+        .intro-duo__profile {
+
+            height: 500px;
+
+            .profile-img {
+                background-image: url("https://ik.imagekit.io/mp2mjn7fgdt/ssme/tr:w-550/content/Scudder-Trixie_profile-550w367h.jpg");
+                background-position-x: center;
+                height: 500px;
+                width: 100%;
+            }
+            .intro-duo__title {
+                display: none;
+            }
+        }
+        .intro-duo__copy {
+            margin: 0;
+            width: calc( 100% - 4em );
+            padding: 2em;
+            align-content: top;
+
+            .intro-duo__title {
+                display: block;
+            }
+
+        }
+    }
+    @include sm {
+        .intro-duo {
+            display: flex;
+            flex-direction: column;
+            height: 100%;
+        }
+        .intro-duo__profile {
+            height: 300px;
+            .profile-img {
+                background-image: url("https://ik.imagekit.io/mp2mjn7fgdt/ssme/tr:w-250/content/Scudder-Trixie_profile-250w167h.jpg");
+                background-position-x: center;
+                height: 300px;
+                width: 100%;
+            }
+            .intro-duo__title {
+                display: none;
+            }
+        }
+        .intro-duo__copy {
+
+            margin: 0;
+            width: calc( 100% - 4em );
+            padding: 2em;
+
+            .intro-duo__title {
+                display: block;
+            }
+
+        }
+    }
+    @include xs {
+        .intro-duo {
+            display: flex;
+            flex-direction: column;
+            height: 100%;
+        }
+        .intro-duo__profile {
+            height: 250px;
+            .profile-img {
+                background-image: url("https://ik.imagekit.io/mp2mjn7fgdt/ssme/tr:w-250/content/Scudder-Trixie_profile-250w167h.jpg");
+                background-position-x: center;
+                height: 250px;
+                width: 100%;
+            }
+            .intro-duo__title {
+                display: none;
+            }
+        }
+        .intro-duo__copy {
+
+            display: block;
+            width: 100%;
+
+            .intro-duo__title {
+                display: block;
+            }
+
+        }
+    }
+
     // buttons   
     /*  .btn-grp,
         .btn-wrapper {
