--- a/latest/css/themes/me.scss
+++ b/latest/css/themes/me.scss
@@ -804,7 +804,7 @@ $accent: adjust-hue( $secondary, 180 );
 
     // timeline
     .career-timeline {
-        padding-bottom: 1.75rem;
+        padding: 1.75rem 0;
     }
 
     // projects
