--- a/latest/css/themes/me.css
+++ b/latest/css/themes/me.css
@@ -58,19 +58,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Dosis:wght@523&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 .me {
   background-color: #ffffff;
-  /*  .btn-grp,
-        .btn-wrapper {
-        &:first-child {
-            .btn {
-                margin: .5rem .35rem .5rem 0;
-            }
-        }
-        &:last-child {
-            .btn {
-                margin: .5rem 0 .5rem .35rem;
-            }
-        }
-    } */
 }
 
 .me .alert {
@@ -1291,6 +1278,127 @@ a.micro {
 
 .me .project-conclusion p {
   margin: .5rem 2rem 1.25rem 0;
+}
+
+.me .project-conclusion_ctas {
+  height: .25rem;
+}
+
+.me .project-cta_btn-grp a.cta-btn {
+  padding: .75rem .5rem;
+  color: #b11d98;
+  background-color: #d9d9d9;
+}
+
+.me .project-cta_btn-grp a.cta-btn svg {
+  width: 1.75rem;
+  height: 1.75rem;
+  margin-right: .35rem;
+  color: silver;
+}
+
+.me .project-cta_btn-grp a.cta-btn svg .logo {
+  fill: #a6a6a6;
+  stroke: #a6a6a6;
+}
+
+.me .project-cta_btn-grp a.cta-btn:visited {
+  color: #861672;
+}
+
+.me .project-cta_btn-grp a.cta-btn:visited svg {
+  color: #37092f;
+}
+
+.me .project-cta_btn-grp a.cta-btn:visited svg .logo {
+  fill: #861672;
+  stroke: #861672;
+}
+
+.me .project-cta_btn-grp a.cta-btn:hover {
+  color: #c721aa;
+  background-color: #631054;
+  text-decoration: underline;
+}
+
+.me .project-cta_btn-grp a.cta-btn:hover svg {
+  color: #2e0827;
+}
+
+.me .project-cta_btn-grp a.cta-btn:hover svg .logo {
+  fill: #c721aa;
+  stroke: #c721aa;
+}
+
+.me .project-cta_btn-grp a.cta-btn:active {
+  color: #ffffff;
+  text-decoration: underline;
+}
+
+.me .project-cta_btn-grp a.cta-btn:active svg {
+  color: #180415;
+}
+
+.me .project-cta_btn-grp a.cta-btn:active svg .logo {
+  fill: #ffffff;
+  stroke: #ffffff;
+}
+
+.me .project-conclusion_end-cap {
+  height: 2.5rem;
+}
+
+@media (min-width: 576px) and (max-width: 960px) {
+  .me .project .btn-grp,
+  .me .project.grid__fixed-width.btn-grp {
+    flex-direction: column;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+  }
+  .me .grid-1-3.btn {
+    width: 100%;
+  }
+  .me .cta_btn-grp a.cta-btn,
+  .me .project a.cta-btn {
+    padding: .75rem 2.5rem;
+    justify-content: flex-start;
+  }
+}
+
+@media (min-width: 376px) and (max-width: 575px) {
+  .me .project .btn-grp,
+  .me .project .grid__fixed-width.btn-grp {
+    flex-direction: column;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+  }
+  .me .grid-1-3.btn {
+    width: 100%;
+  }
+  .me .cta_btn-grp a.cta-btn,
+  .me .project a.cta-btn {
+    padding: .75rem 2.5rem;
+    justify-content: flex-start;
+  }
+}
+
+@media (max-width: 375px) {
+  .me .project .btn-grp,
+  .me .projects .grid__fixed-width.btn-grp {
+    flex-direction: column;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+  }
+  .me .grid-1-3.btn {
+    width: 100%;
+  }
+  .me .cta_btn-grp a.cta-btn,
+  .me .project a.cta-btn {
+    justify-content: flex-start;
+  }
 }
 
 .me footer {
